[ issue 9 ] Fix table cell alignment in popup.  Separate out key and summary column generation in stylesheet.

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -37,7 +37,3 @@ body {
 .faded {
 	color: #999;
 }
-
-.rightAlign {
-	align: right;
-}
