--- a/src/main/resources/css/popup.css
+++ b/src/main/resources/css/popup.css
@@ -14,10 +14,6 @@ td {
 	max-width: 400px;
 }
 
-.key {
-	font-weight: bold;
-}
-
 .title {
 	font-size: 14px;
 	cursor: pointer;
